Adicionando carrossel de imagens com as fotos do usuário

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="image-carousel">
+        <img src="assets/images/user_image_1.jpg" alt="Imagem 1" class="carousel-image active">
+        <img src="assets/images/user_image_2.jpg" alt="Imagem 2" class="carousel-image">
+    </div>
     <header>
         <h1>Campeonato Brasileiro Série A 2025</h1>
         <p id="last-update">Última atualização: Carregando...</p>
